Add string for crashlytics

--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">KmmBeers</string>
+    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
+
 </resources>
